# glamira_e_commerce_analytics_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
environment/: config.yml
src/bigquery/raw_layer_uploader/: __main__.py  column_analyzer.py  gcs_to_bigquery.py  inspect_nested_fields.py  schema_dict.py
src/bigquery/raw_layer_uploader/fields/: field_types_location.csv  field_types_product.csv  field_types_raw.csv
src/crawl_checker/: crawled_pid.csv  origin_pid.csv  uncrawled_pid.csv  uncrawled_pid_seeker.py
src/data_enrichment/location_enrichment/: __main__.py  collect_location.py  enrich_location.py  get_ip.py  save_files.py  upload.py
src/data_enrichment/product_enrichment/: __main__.py  collects_product.py  get_pid.py  get_product_data.py  processing_product_data.py  save_files.py  split_data.py  total_pid.py  upload.py
src/data_enrichment/product_enrichment_multiprocessing/: __main__.py  collects_product.py  get_product_data.py
src/data_enrichment/product_enrichment_multiprocessing_threading_proxy/: .env  __main__.py  collects_product.py  get_pid.py  get_product_data.py  proxy_config.py  save_files.py  total_pid.py
src/data_enrichment/product_enrichment_sequencing/: __main__.py  collects_product.py
src/data_profiling/: __main__.py  country_region.csv  distinct_domain.csv  location_profiling.py  product_field.csv  product_profiling.py
src/glamira_dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
src/upload_gcs/: __main__.py  download_ip2location_data.py  download_product_data.py  download_raw.py  upload.py
(+26 files in other folders)
