[project]
name = "glamira-e-commerce-analytics-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = " Tan, Huynh Nguyen Ngoc",email = "ngoctan300904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ip2location (>=8.11.0,<9.0.0)",
    "pymongo (>=4.15.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tldextract (>=5.3.0,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "google-cloud-storage (>=3.4.0,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "dbt-core (>=1.10.11,<2.0.0)",
    "dbt-snowflake (>=1.10.2,<2.0.0)",
    "dbt-bigquery (>=1.10.2,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
